--- a/admin/src/app/components/config/config.component.html
+++ b/admin/src/app/components/config/config.component.html
@@ -35,13 +35,18 @@
           </div>
           <div class="form-group row align-items-center">
             <label class="col-md-3 col-form-label font-weight-medium" for="text-input">Categorías</label>
-            <div class="col-md-4">
-              <input class="form-control" type="text" id="text-input" placeholder="Titulo" name="titulo_cat" [(ngModel)]="titulo_cat">
+            <div class="col-md-9">
+              <input class="form-control" type="text" id="text-input" placeholder="Marca" name="titulo_cat" [(ngModel)]="titulo_cat">
 
             </div>
-            <div class="col-md-5">
-              <input class="form-control" type="text" id="text-input" placeholder="Icono" name="icono_cat" [(ngModel)]="icono_cat">
-            </div>
+            <!-- <div class="col-md-5">
+               <div class="custom-file">
+                <input class="custom-file-input" type="file" id="file-input">
+                <label class="custom-file-label" id="portadaText" for="file-input"
+                  style="white-space:nowrap; overflow:hidden">Seleccionar imagen</label>
+              </div>
+              <input class="form-control" type="text" id="text-input" placeholder="Modelo" name="icono_cat" [(ngModel)]="icono_cat">
+            </div> -->
             <div class="col-md-3">
             </div>
             <div class="col-md-9">
@@ -53,8 +58,8 @@
                   <thead class="thead-dark">
                     <tr>
 
-                      <th>Categoria</th>
-                      <th>Icono</th>
+                      <th>Marca</th>
+                      <!-- <th>Icono</th> -->
                       <th></th>
 
                     </tr>
@@ -75,9 +80,9 @@
                         <td>
                           {{item.titulo}}
                         </td>
-                        <td>
-                          <i class="{{item.icono}}"></i> - {{item.icono}}
-                        </td>
+                        <!-- <td>
+                          {{item.icono}}
+                        </td> -->
                         <td>
                           <a class="text-danger" style="cursor:pointer" (click)="eliminar_categoria(indice)"><i class="fa fa-times" aria-hidden="true"></i></a>
                         </td>
