--- a/admin/src/app/components/productos/create-producto/create-producto.component.html
+++ b/admin/src/app/components/productos/create-producto/create-producto.component.html
@@ -1,82 +1,95 @@
 <app-sidebar></app-sidebar>
 
 <div class="border-bottom pt-5 mt-2 mb-5">
-  <h1 class="mt-2 mt-md-4 mb-3 pt-5">Productos</h1>
+  <div class="mt-2 mt-md-4 mb-3 pt-5">
+  <div class="wrapper">
+    <input type="radio" name="select" id="option-1" value="vehiculo" name="tipo" [(ngModel)]="producto.tipo" checked>
+    <input type="radio" name="select" id="option-2" value="producto" name="tipo" [(ngModel)]="producto.tipo">
+      <label for="option-1" class="option option-1">
+        <div class="dot"></div>
+         <span>Registro de vehiculo</span>
+         </label>
+      <label for="option-2" class="option option-2">
+        <div class="dot"></div>
+         <span>Registro de producto</span>
+      </label>
+   </div>
+  </div>
 </div>
 
 <form #registroForm="ngForm" (ngSubmit)="registro(registroForm)">
   <div class="card box-shadow-sm">
-    <div class="card-header">
-      <h5 style="margin-bottom: 0px;">Registro de producto</h5>
-    </div>
-    <div class="card-body">
-      <div class="row">
-        <div class="col-lg-8">
-          <div class="row">
-            <div class="col-lg-8 form-group">
-              <label for="">Producto</label>
-              <input type="text" class="form-control" placeholder="Titulo de producto" required name="titulo"
-                [(ngModel)]="producto.titulo">
-            </div>
-            <div class="col-lg-4 form-group">
-              <label for="">Código</label>
-              <input type="text" class="form-control" placeholder="Código de producto" required name="codigo"
-                [(ngModel)]="producto.codigo">
-            </div>
-            <div class="col-lg-3 form-group">
-              <label for="">Stock</label>
-              <input type="number" class="form-control" placeholder="Cantidad inicial" min="1" required name="stock"
-                [(ngModel)]="producto.stock">
-            </div>
-            <div class="col-lg-3 form-group">
-              <label for="">Alerta de stock</label>
-              <input type="number" class="form-control" placeholder="Alertar stock" min="1" name="alerta_stock"
-                [(ngModel)]="producto.alerta_stock">
-            </div>
-            <div class="col-lg-3 form-group">
-              <label for="">Precio</label>
-              <input type="number" class="form-control" placeholder="Precio" min="1" required name="precio"
-                [(ngModel)]="producto.precio">
-            </div>
-            <div class="col-lg-3 form-group">
-              <label for="">Categoría</label>
-              <select class="form-control custom-select" id="select-input" required name="categoria"
-                [(ngModel)]="producto.categoria">
-                <option value="" selected disabled>Seleccionar</option>
-                <option value="{{item.titulo}}" *ngFor="let item of config.categorias">{{item.titulo}}</option>
-              </select>
-            </div>
-
-            <div class="col-lg-12 form-group">
-              <label for="">Descripción corta</label>
-              <textarea class="form-control" placeholder="Titulo de producto" required rows="5" name="descripcion"
-                [(ngModel)]="producto.descripcion"></textarea>
-            </div>
-            <div class="col-lg-12 form-group">
-              <label for="">Contenido redes</label>
-              <tinymce [config]="config" name="contenido" [(ngModel)]="producto.contenido">
-              </tinymce>
-            </div>
-
-          </div>
-        </div>
-        <div class="col-lg-4">
-          <div class="row">
-            <div class="col-lg-12 form-group">
-              <label for="">Portada</label>
-              <div class="custom-file">
-                <input class="custom-file-input" type="file" id="file-input" (change)="fileChangeEvent($event)">
-                <label class="custom-file-label" id="portadaText" for="file-input"
-                  style="white-space:nowrap; overflow:hidden">Seleccionar imagen</label>
+    <ng-container>
+      <div class="card-body">
+        <div class="row">
+          <div class="col-lg-8">
+            <div class="row">
+              <div class="col-lg-8 form-group">
+                <label for="">Producto</label>
+                <input type="text" class="form-control" placeholder="Titulo de producto" required name="titulo"
+                  [(ngModel)]="producto.titulo">
               </div>
+              <div class="col-lg-4 form-group">
+                <label for="">Código</label>
+                <input type="text" class="form-control" placeholder="Código de producto" required name="codigo"
+                  [(ngModel)]="producto.codigo">
+              </div>
+              <div class="col-lg-3 form-group">
+                <label for="">Stock</label>
+                <input type="number" class="form-control" placeholder="Cantidad inicial" min="1" required name="stock"
+                  [(ngModel)]="producto.stock">
+              </div>
+              <div class="col-lg-3 form-group">
+                <label for="">Alerta de stock</label>
+                <input type="number" class="form-control" placeholder="Alertar stock" min="1" name="alerta_stock"
+                  [(ngModel)]="producto.alerta_stock">
+              </div>
+              <div class="col-lg-3 form-group">
+                <label for="">Precio</label>
+                <input type="number" class="form-control" placeholder="Precio" min="1" required name="precio"
+                  [(ngModel)]="producto.precio">
+              </div>
+              <div class="col-lg-3 form-group">
+                <label for="">Categoría</label>
+                <select class="form-control custom-select" id="select-input" required name="categoria"
+                  [(ngModel)]="producto.categoria">
+                  <option value="" selected disabled>Seleccionar</option>
+                  <option value="{{item.titulo}}" *ngFor="let item of config.categorias">{{item.titulo}}</option>
+                </select>
+              </div>
+  
+              <div class="col-lg-12 form-group">
+                <label for="">Descripción corta</label>
+                <textarea class="form-control" placeholder="Titulo de producto" required rows="5" name="descripcion"
+                  [(ngModel)]="producto.descripcion"></textarea>
+              </div>
+              <div class="col-lg-12 form-group">
+                <label for="">Contenido redes</label>
+                <tinymce [config]="config" name="contenido" [(ngModel)]="producto.contenido">
+                </tinymce>
+              </div>
+  
             </div>
-            <div class="col-lg-12">
-              <img [src]="imgSelect" class="img-thumbnail" alt="Rounded image">
+          </div>
+          <div class="col-lg-4">
+            <div class="row">
+              <div class="col-lg-12 form-group">
+                <label for="">Portada</label>
+                <div class="custom-file">
+                  <input class="custom-file-input" type="file" id="file-input" (change)="fileChangeEvent($event)">
+                  <label class="custom-file-label" id="portadaText" for="file-input"
+                    style="white-space:nowrap; overflow:hidden">Seleccionar imagen</label>
+                </div>
+              </div>
+              <div class="col-lg-12">
+                <img [src]="imgSelect" class="img-thumbnail" alt="Rounded image">
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
+    </ng-container>
+    
     <div class="card-footer">
       <button *ngIf="!load_btn" class="btn btn-primary mr-3" type="submit">Crear producto</button>
       <button *ngIf="load_btn" type="button" class="btn btn-secondary" disabled>
